# new-valg-system

./: .gitignore
backend/: app.py  docker-compose.yml  fakedata.py  jest.config.ts  package-lock.json  package.json  requirements.txt  run.py  tsconfig.json
backend/app/: __init__.py  models.py  routes.py
backend/authentication/: package-lock.json  package.json  tsconfig.json
backend/core-api/: .prettierrc  Dockerfile  package-lock.json  package.json  tsconfig.cypress.json  tsconfig.jest.json  tsconfig.json
backend/job-scheduler-rs/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/job-scheduler-rs/src/: lib.rs  main.rs
backend/job-scheduler-rs/src/config/: database.rs  environment.rs
backend/job-scheduler-rs/src/errors/: mod.rs
backend/job-scheduler-rs/src/models/: bill_model.rs  bill_status.rs  mod.rs
backend/job-scheduler-rs/src/repositories/: mod.rs  recurrence_repository.rs
backend/job-scheduler-rust/: .dockerignore  Cargo.toml  Dockerfile  Procfile  README.Docker.md
backend/src/: index.ts
bills-scheduler/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
bills-scheduler/prisma/: schema.prisma
bills-scheduler/src/: index.ts  server.ts
data/: account_schema.sql  bills_schema.sql
data/recurrency_bills/: script.sql
data/schemas/: bills.sql  sessions.sql  users.sql
frontend/: README.md  olamundo.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx
job-scheduler-rust/: Cargo.toml  Dockerfile
jobs-schedulers/: eslint.config.mjs  package-lock.json  package.json
(+316 files in other folders)
